# SpringRESTWeatherSensor/src/main/java/org/weathersensor/SpringRESTWeatherSensor/dto/JwtRequestDto.java
@@ -1,0 +1,10 @@
+package org.weathersensor.SpringRESTWeatherSensor.dto;
+
+import lombok.Getter;
+
+@Getter
+public class JwtRequestDto {
+
+    private String username;
+    private String password;
+}
