# SpringRESTWeatherSensor/src/main/java/org/weathersensor/SpringRESTWeatherSensor/models/Operator.java
@@ -1,7 +1,26 @@
 package org.weathersensor.SpringRESTWeatherSensor.models;
 
-import jakarta.persistence.*;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.RequiredArgsConstructor;
+import lombok.Setter;
 
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.JoinTable;
+import javax.persistence.ManyToMany;
+import javax.persistence.Table;
+import javax.validation.constraints.NotEmpty;
+import javax.validation.constraints.Size;
+import java.util.Set;
+
+@Getter
+@Setter
+@NoArgsConstructor
 @Entity
 @Table(name = "operator")
 public class Operator {
@@ -9,43 +28,28 @@ public class Operator {
     @Id
     @Column(name = "id")
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private Integer id;
+    private Long id;
 
     @Column(name = "name")
     private String name;
 
+    @NotEmpty(message = "Personal Number should not be empty")
     @Column(name = "personal_number")
     private Integer personalNumber;
 
-    public Operator() {
-    }
+    @NotEmpty(message = "Username should not be empty")
+    @Size(min = 2, max = 100, message = "Username's length should be from 2 to 100 chars")
+    @Column(name = "username")
+    private String username;
 
-    public Operator(String name, Integer personalNumber) {
-        this.name = name;
-        this.personalNumber = personalNumber;
-    }
+    @Column(name = "password")
+    private String password;
 
-    public Integer getId() {
-        return id;
-    }
-
-    public void setId(Integer id) {
-        this.id = id;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public Integer getPersonalNumber() {
-        return personalNumber;
-    }
-
-    public void setPersonalNumber(Integer personalNumber) {
-        this.personalNumber = personalNumber;
-    }
+    @ManyToMany
+    @JoinTable(
+            name = "operator_role",
+            joinColumns = @JoinColumn(name = "operator_id"),
+            inverseJoinColumns = @JoinColumn(name = "role_id")
+    )
+    private Set<Role> roles;
 }
